scheem/scheem.peg
start = expression

expression = (comment/ whitespace)* e:(atom / exprlist / quote) (comment/ whitespace)*
                { return e; }
                
validchar = [0-9a-zA-Z_?!+=@#$%^&*/.|-]

atom = whitespace* num:[0-9]+ whitespace*
        { return +num.join(""); } /
       whitespace* chars:validchar+ whitespace*
        { return chars.join(""); }

exprlist = whitespace* "(" f:atom s:(expression)* ")" whitespace*
        { return [f].concat(s); }

whitespace = [ \t\n\r]

quote = "'" e:expression
        { return ["quote", e]; }

comment = ';;' [^\n\r]*
